# solar-system

./: .gitignore  CMakeLists.txt  imgui.ini
shaders/: basic_fragment.glsl  basic_vertex.glsl  fragment.glsl  phong_fragment.glsl  phong_vertex.glsl  vertex.glsl
src/: basic_shader.cpp  basic_shader.hpp  camera.cpp  camera.hpp  cube.cpp  cube.hpp  main.cpp  phong_shader.cpp  phong_shader.hpp  planet.cpp  planet.hpp  render_object.cpp  render_object.hpp  ring.cpp  ring.hpp  shader.cpp  shader.hpp  space_dome.cpp  space_dome.hpp  state.hpp  utils.cpp  utils.h  vertex.hpp
